# comfyUI-kling-api-2lab

./: .gitignore  README.md  __init__.py  config.json  config.json.example  constants.py  kling.py  pyproject.toml  requirements.txt
workflow/: Kling_text2video_custom_camara_control.json  Kling_text2video_preset_camara_control.json  Kolors_image.json  Kolors_virtual_try_on.json  kling_image2video.json  kling_text2video.json
